--- a/style.css
+++ b/style.css
@@ -9,3 +9,21 @@
     left: 812px;
     top: 225px;
 }
+
+ul {
+    position: absolute;
+    top: 20px;
+    left: 0px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+li {
+    display: inline;
+}
+
+li a{
+    padding: 8px;
+}
