--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     top: 225px;
 }
 
-ul {
+.topbar{
     position: absolute;
     top: 20px;
     left: 0px;
@@ -26,4 +26,25 @@ li {
 
 li a{
     padding: 8px;
+}
+
+right {
+    float: right;
+}
+
+.footer{
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    padding: 0;
+    padding-top: 14px;
+    padding-left: 1%;
+    padding-right: 1%;
+    margin: 0px;
+    width: 98%;
+    height: 28px;
+    background-color: hsl(0, 0%, 93%);
+    font-size: 14px;
+    color: hsl(0, 0%, 41%);
+    font-family: Arial, Helvetica, sans-serif;
 }
