--- a/style.css
+++ b/style.css
@@ -17,7 +17,12 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 100%;
+    padding-left: 1%;
+    padding-right: 1%;
+    width: 98%;
+    font-size: 13px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: hsl(0, 0%, 41%);
 }
 
 li {
